--- a/kafkapythonadv/docker-compose.yml
+++ b/kafkapythonadv/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
     volumes:
-      - ./app:/app
+      - ./:/app
     ports:
       - "8000:8000"
     command: uvicorn main:app --host 0.0.0.0 --port 8000
